--- a/src/views/TransaktionXML.fxml
+++ b/src/views/TransaktionXML.fxml
@@ -30,7 +30,7 @@
                     <columns>
                       <TableColumn fx:id="colAktie" prefWidth="264.0" text="Aktie" />
                       <TableColumn fx:id="colStueckzahl" prefWidth="152.0" text="Stückzahl" />
-                        <TableColumn fx:id="colOCODate" prefWidth="150.0" text="OCO-Datum" />
+                        <TableColumn fx:id="colOCODate" onEditCommit="#onEditOcoDatum" prefWidth="150.0" text="OCO-Datum" />
                         <TableColumn fx:id="colVerkaufKurs" prefWidth="143.0" text="Kurs Verkauf" />
                         <TableColumn fx:id="colVerkaufDatum" prefWidth="150.0" text="Verkaufsdatum" />
                         <TableColumn fx:id="colKaufKurs" prefWidth="163.0" text="Kurs Kauf" />
@@ -40,7 +40,7 @@
                         <ContextMenu>
                           <items>
                             <MenuItem mnemonicParsing="false" onAction="#handleDelete" text="Transaktion löschen" />
-                              <MenuItem mnemonicParsing="false" onAction="#handleUpdate" text="Transaktion ändern" />
+                              <MenuItem mnemonicParsing="false" onAction="#handleUpdate" text="Transaktion abschließen" />
                               <MenuItem mnemonicParsing="false" onAction="#handleNotiz" text="Notiz von Transaktion anzeigen" />
                           </items>
                         </ContextMenu>
