--- a/src/views/anmelden.fxml
+++ b/src/views/anmelden.fxml
@@ -1,45 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextField?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane fx:id="mainSplit" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="300.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controls.AnmeldenCtl">
-  <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-         <children>
-            <VBox layoutX="149.0" layoutY="68.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <Label alignment="CENTER" prefHeight="30.0" prefWidth="600.0" style="-fx-background-color: grey; -fx-border-color: red;" text="Börsi :-)" underline="true">
-                     <font>
-                        <Font name="Courier New Bold" size="21.0" />
-                     </font>
-                  </Label>
-                  <Label alignment="CENTER" text="Benutzer" translateX="75.0" translateY="50.0">
-                     <font>
-                        <Font name="Calibri" size="10.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="lbl_Benutzer" alignment="CENTER" maxWidth="150.0" onKeyPressed="#onEnteredBenutzer" prefHeight="25.0" prefWidth="533.0" translateX="75.0" translateY="50.0" />
-                  <Label alignment="CENTER" text="Passwort" translateX="75.0" translateY="50.0">
-                     <font>
-                        <Font name="Calibri" size="10.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="lbl_Passwort" alignment="CENTER" maxWidth="150.0" onKeyPressed="#onEnteredPasswort" translateX="75.0" translateY="50.0" />
-               </children>
-            </VBox>
-            <ImageView fx:id="imageView" fitHeight="300.0" fitWidth="350.0" pickOnBounds="true" preserveRatio="true" />
-         </children></AnchorPane>
-  </items>
-</SplitPane>
+<AnchorPane id="AnchorPane" prefHeight="367.0" prefWidth="419.0" stylesheets="@../resources/dark-theme.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controls.AnmeldenCtl">
+   <children>
+      <JFXTextField fx:id="username" labelFloat="true" layoutX="95.0" layoutY="122.0" prefHeight="33.0" prefWidth="259.0" promptText="Username">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </JFXTextField>
+      <JFXPasswordField fx:id="password" labelFloat="true" layoutX="97.0" layoutY="194.0" onAction="#handleLoginButtonAction" prefHeight="34.0" prefWidth="259.0" promptText="Password">
+         <font>
+            <Font size="17.0" />
+         </font>
+      </JFXPasswordField>
+      <JFXButton layoutX="106.0" layoutY="278.0" onAction="#handleLoginButtonAction" prefHeight="40.0" prefWidth="90.0" styleClass="login-button" text="Login" />
+      <JFXButton layoutX="239.0" layoutY="278.0" onAction="#handleCancelButtonAction" prefHeight="40.0" prefWidth="90.0" styleClass="login-button" text="Cancel" />
+      <FontAwesomeIconView glyphName="LOCK" layoutX="200.0" layoutY="79.0" size="55" />
+      <FontAwesomeIconView glyphName="USER" layoutX="64.0" layoutY="149.0" size="25" />
+      <FontAwesomeIconView glyphName="KEY" layoutX="64.0" layoutY="224.0" size="25" />
+   </children>
+</AnchorPane>
