--- a/src/views/tradingIdee.fxml
+++ b/src/views/tradingIdee.fxml
@@ -1,22 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.LineChart?>
-<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="695.0" prefWidth="1102.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controls.TradingIdeeCtl">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="490.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controls.TradingIdeeCtl">
    <top>
       <HBox prefHeight="50.0" prefWidth="600.0" BorderPane.alignment="CENTER">
          <children>
@@ -28,12 +22,11 @@
             </VBox>
             <VBox prefHeight="52.0" prefWidth="146.0">
                <children>
-                  <TextField fx:id="txtKurs_WKN" />
+                  <TextField fx:id="txtKurs_WKN" prefHeight="25.0" prefWidth="97.0" />
                   <Label prefHeight="21.0" prefWidth="145.0" text="Aktienname/WKN" />
                </children>
             </VBox>
             <Button fx:id="btnKurs_WKN" mnemonicParsing="false" onAction="#onKurs_WKN" prefHeight="31.0" prefWidth="169.0" text="Kurs ermitteln" />
-            <Label fx:id="lbl_Meldung" prefHeight="42.0" prefWidth="555.0" />
          </children>
       </HBox>
    </top>
@@ -104,38 +97,4 @@
          </children>
       </VBox>
    </left>
-   <center>
-      <LineChart fx:id="graphKurs" prefHeight="300.0" prefWidth="459.0" BorderPane.alignment="CENTER">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis side="LEFT" />
-        </yAxis>
-      </LineChart>
-   </center>
-   <right>
-      <VBox prefHeight="300.0" prefWidth="125.0" BorderPane.alignment="CENTER">
-         <children>
-            <HBox prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Tageshoch:" />
-                  <Label fx:id="txtTagesHoch" text="Label" />
-               </children>
-            </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Tagestief:" />
-                  <Label fx:id="txtTagesTief" text="Label" />
-               </children>
-            </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Akt. Kurs:" />
-                  <Label fx:id="txtAktKurs_Rechts" text="Label" />
-               </children>
-            </HBox>
-         </children>
-      </VBox>
-   </right>
 </BorderPane>
