--- a/src/resources/dark-theme.css
+++ b/src/resources/dark-theme.css
@@ -5,7 +5,7 @@
 
 * {
     -fx-primary : #2A2E37;
-    -fx-secondary : #FFFF8D;
+    -fx-secondary : #3f3f2b;
     -fx-primarytext : #B2B2B2;
     -fx-blue: #1976D2;
     -fx-red: #FF0000;
@@ -42,6 +42,8 @@
     -fx-font-size : 12pt;
     -jfx-focus-color: -fx-secondary;
     -fx-text-fill: derive(-fx-secondary, 20%);
+    -fx-padding: 20pt;
+    
 }
 
 /*Login Screen Specific*/
