--- a/src/views/AktieXML.fxml
+++ b/src/views/AktieXML.fxml
@@ -1,54 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<SplitPane dividerPositions="0.9" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="300.0" prefWidth="350.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controls.AktieCtl">
+<SplitPane dividerPositions="0.9" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="500.0" prefWidth="730.0" stylesheets="@../resources/dark-theme.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controls.AktieCtl">
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
          <children>
             <VBox layoutX="149.0" layoutY="68.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Label alignment="CENTER" prefHeight="30.0" prefWidth="600.0" style="-fx-background-color: grey; -fx-border-color: red;" text="Aktie anlegen" underline="true">
+                  <Label alignment="CENTER" prefHeight="30.0" prefWidth="730.0" style="-fx-background-color: grey; -fx-border-color: red;" text="Aktie anlegen" underline="true">
                      <font>
                         <Font name="Courier New Bold" size="21.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER" text="WKN">
+                  <JFXTextField fx:id="lbl_WKN" labelFloat="true" prefHeight="33.0" prefWidth="259.0" promptText="WKN">
                      <font>
-                        <Font name="Calibri" size="10.0" />
+                        <Font size="16.0" />
+                     </font>
+                  </JFXTextField>
+                  <JFXTextField fx:id="lbl_Bezeichnung" labelFloat="true" prefHeight="33.0" prefWidth="259.0" promptText="Bezeichnung">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </JFXTextField>
+                  <Label fx:id="lbl_meldung" alignment="CENTER" contentDisplay="CENTER" prefHeight="51.0" prefWidth="728.0" textFill="#119064" underline="true">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="lbl_WKN" alignment="CENTER" maxWidth="150.0" prefHeight="25.0" prefWidth="533.0" />
-                  <Label alignment="CENTER" text="Bezeichnung">
-                     <font>
-                        <Font name="Calibri" size="10.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="lbl_Bezeichnung" alignment="CENTER" maxWidth="150.0" />
                </children>
             </VBox>
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
          <children>
-            <HBox prefHeight="26.0" prefWidth="350.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-2.0" AnchorPane.topAnchor="0.0">
+            <HBox prefHeight="47.0" prefWidth="730.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-2.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Button fx:id="btn_Create" mnemonicParsing="false" onAction="#onCreateDepot" prefHeight="31.0" prefWidth="185.0" text="Anlegen" translateX="75.0">
-                     <graphic>
-                        <Label fx:id="lbl_meldung" prefHeight="21.0" prefWidth="106.0" />
-                     </graphic>
-                  </Button>
-                  <Button fx:id="btn_Exit" mnemonicParsing="false" onAction="#onExitDepot" text="Beenden" translateX="75.0" />
+                  <Button fx:id="btnCreate" mnemonicParsing="false" onAction="#onCreateDepot" prefHeight="31.0" prefWidth="185.0" text="Anlegen" translateX="75.0" />
                </children>
             </HBox>
          </children></AnchorPane>
