--- a/src/views/TransaktionXML.fxml
+++ b/src/views/TransaktionXML.fxml
@@ -1,40 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ContextMenu?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
 
-<SplitPane fx:id="stageTransaktions" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="700.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controls.TransaktionCtl">
+<SplitPane fx:id="stageTransaktions" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="500.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controls.TransaktionCtl">
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
          <children>
             <VBox layoutX="149.0" layoutY="68.0" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Label alignment="CENTER" prefHeight="29.0" prefWidth="1193.0" style="-fx-background-color: grey; -fx-border-color: red;" text="Transaktion verwalten" underline="true">
-                     <font>
-                        <Font name="Courier New Bold" size="21.0" />
-                     </font>
-                  </Label>
-                  <TableView fx:id="tblTransaktion" onMouseClicked="#onAuswahl" prefHeight="646.0" prefWidth="1185.0">
+                  <TableView fx:id="tblTransaktion" onMouseClicked="#onAuswahl" prefHeight="500.0" prefWidth="730.0" stylesheets="@../resources/dark-theme.css">
                     <columns>
-                      <TableColumn fx:id="colAktie" prefWidth="264.0" text="Aktie" />
-                      <TableColumn fx:id="colStueckzahl" prefWidth="152.0" text="Stückzahl" />
-                        <TableColumn fx:id="colOCODate" onEditCommit="#onEditOcoDatum" prefWidth="150.0" text="OCO-Datum" />
-                        <TableColumn fx:id="colVerkaufKurs" prefWidth="143.0" text="Kurs Verkauf" />
-                        <TableColumn fx:id="colVerkaufDatum" prefWidth="150.0" text="Verkaufsdatum" />
-                        <TableColumn fx:id="colKaufKurs" prefWidth="163.0" text="Kurs Kauf" />
-                        <TableColumn fx:id="colKaufDatum" prefWidth="162.0" text="Kaufdatum" />
+                      <TableColumn fx:id="colAktie" prefWidth="108.66668701171875" text="Aktie" />
+                      <TableColumn fx:id="colStueckzahl" prefWidth="81.0" text="Stückzahl" />
+                        <TableColumn fx:id="colOCODate" onEditCommit="#onEditOcoDatum" prefWidth="115.6666259765625" text="OCO-Datum" />
+                        <TableColumn fx:id="colVerkaufKurs" prefWidth="108.3333740234375" text="Kurs Verkauf" />
+                        <TableColumn fx:id="colVerkaufDatum" prefWidth="121.33331298828125" text="Verkaufsdatum" />
+                        <TableColumn fx:id="colKaufKurs" prefWidth="93.66668701171875" text="Kurs Kauf" />
+                        <TableColumn fx:id="colKaufDatum" prefWidth="101.333251953125" text="Kaufdatum" />
                     </columns>
                      <contextMenu>
                         <ContextMenu>
@@ -42,6 +30,7 @@
                             <MenuItem mnemonicParsing="false" onAction="#handleDelete" text="Transaktion löschen" />
                               <MenuItem mnemonicParsing="false" onAction="#handleUpdate" text="Transaktion abschließen" />
                               <MenuItem mnemonicParsing="false" onAction="#handleNotiz" text="Notiz von Transaktion anzeigen" />
+                              <MenuItem mnemonicParsing="false" onAction="#handleReload" text="Liste aktualisieren" />
                           </items>
                         </ContextMenu>
                      </contextMenu>
