--- a/src/views/tradingIdee.fxml
+++ b/src/views/tradingIdee.fxml
@@ -1,100 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXDatePicker?>
+<?import com.jfoenix.controls.JFXRadioButton?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="490.0" prefWidth="720.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controls.TradingIdeeCtl">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="730.0" stylesheets="@../resources/dark-theme.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controls.TradingIdeeCtl">
    <top>
-      <HBox prefHeight="50.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <HBox prefHeight="90.0" prefWidth="720.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox prefHeight="52.0" prefWidth="162.0">
+            <VBox prefHeight="100.0" prefWidth="719.0">
                <children>
-                  <Label fx:id="txtAktuellerKontostand" />
-                  <Label prefHeight="21.0" prefWidth="145.0" text="Aktueller Depotstand" />
+                  <HBox prefHeight="50.0" prefWidth="151.0">
+                     <children>
+                        <JFXTextField fx:id="txtKurs_WKN" prefHeight="37.0" prefWidth="300.0" promptText="Aktienname/WKN" />
+                        <JFXTextField fx:id="txtAktKurs_Links" prefHeight="37.0" prefWidth="150.0" promptText="Aktueller Kurs" />
+                        <JFXTextField fx:id="txtKursZiel" prefHeight="37.0" prefWidth="150.0" promptText="Kursziel" />
+                        <JFXTextField fx:id="txtStoppLoss" prefHeight="37.0" prefWidth="150.0" promptText="Stopp" />
+                     </children>
+                  </HBox>
+                  <Separator prefWidth="200.0" />
+                  <HBox prefHeight="48.0" prefWidth="719.0">
+                     <children>
+                        <Button fx:id="btnGuV" mnemonicParsing="false" onAction="#onBerechnen" prefHeight="39.0" prefWidth="213.0" text="Berechnen" />
+                        <JFXTextField fx:id="txtStueckzahl" editable="false" prefHeight="37.0" prefWidth="200.0" promptText="Stückzahl" />
+                        <JFXTextField fx:id="txtGuVVerhaeltnis" editable="false" prefHeight="37.0" prefWidth="219.0" promptText="GuV-Verhältnis:" />
+                     </children>
+                  </HBox>
                </children>
             </VBox>
-            <VBox prefHeight="52.0" prefWidth="146.0">
-               <children>
-                  <TextField fx:id="txtKurs_WKN" prefHeight="25.0" prefWidth="97.0" />
-                  <Label prefHeight="21.0" prefWidth="145.0" text="Aktienname/WKN" />
-               </children>
-            </VBox>
-            <Button fx:id="btnKurs_WKN" mnemonicParsing="false" onAction="#onKurs_WKN" prefHeight="31.0" prefWidth="169.0" text="Kurs ermitteln" />
          </children>
       </HBox>
    </top>
    <bottom>
-      <HBox prefHeight="50.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+      <HBox prefHeight="111.0" prefWidth="730.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox prefHeight="73.0" prefWidth="453.0">
+            <VBox prefHeight="73.0" prefWidth="286.0">
                <children>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Label text="Übernahme als konkreter Trade" />
-                        <RadioButton fx:id="rbKonkreter" mnemonicParsing="false" selected="true">
+                        <JFXRadioButton fx:id="rbKonkreterVorschlag" prefHeight="36.0" prefWidth="288.0" text="Übernahme als konkreter Trade">
                            <toggleGroup>
                               <ToggleGroup fx:id="RadioStar" />
                            </toggleGroup>
-                        </RadioButton>
+                        </JFXRadioButton>
                      </children>
                   </HBox>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Label text="Übernahme als Vorschlag" />
-                        <RadioButton fx:id="rbVorschlag" mnemonicParsing="false" toggleGroup="$RadioStar" />
+                        <JFXRadioButton fx:id="rbVorschlag" prefHeight="36.0" prefWidth="288.0" text="Übernahme als Vorschlag" toggleGroup="$RadioStar" />
                      </children>
                   </HBox>
-                  <Button fx:id="bntAbschicken" mnemonicParsing="false" onAction="#onAbschicken" text="Abschicken" />
-               </children>
-            </VBox>
-            <VBox prefHeight="73.0" prefWidth="169.0">
-               <children>
-                  <Label text="Übersicht der Trades" />
-                  <Button fx:id="btnUebersicht" mnemonicParsing="false" onAction="#onUebersicht" text="Button" />
-               </children>
-            </VBox>
-            <VBox prefHeight="73.0" prefWidth="73.0">
-               <children>
-                  <Label text="Zum Broker" />
-                  <Button fx:id="btnBroker" mnemonicParsing="false" onAction="#onBroker" text="Button" />
+                  <Button fx:id="bntAbschicken" mnemonicParsing="false" onAction="#onAbschicken" prefHeight="39.0" prefWidth="289.0" text="Abschicken" />
                </children>
             </VBox>
          </children>
       </HBox>
    </bottom>
    <left>
-      <VBox prefHeight="543.0" prefWidth="206.0" BorderPane.alignment="CENTER">
+      <VBox prefHeight="280.0" prefWidth="214.0" BorderPane.alignment="CENTER">
          <children>
-            <Label prefHeight="17.0" prefWidth="86.0" text="Kurzziel" />
-            <TextField fx:id="txtKursZiel" />
-            <Label prefHeight="17.0" prefWidth="83.0" text="Stopploss" />
-            <TextField fx:id="txtStoppLoss" />
-            <Label text="akt. Kurs" />
-            <TextField fx:id="txtAktKurs_Links" />
-            <HBox prefHeight="35.0" prefWidth="150.0">
-               <children>
-                  <Label text="Stückzahl:" />
-                  <Label fx:id="txtStueckzahl" />
-               </children>
-            </HBox>
-            <HBox prefHeight="30.0" prefWidth="125.0">
-               <children>
-                  <Label text="GuV-Verhältnis:" />
-                  <Label fx:id="txtGuVVerhaeltnis" />
-               </children>
-            </HBox>
-            <Button fx:id="btnGuV" mnemonicParsing="false" onAction="#onBerechnen" prefHeight="39.0" prefWidth="213.0" text="Berechnen" />
-            <Label fx:id="lblMeldung" prefHeight="21.0" prefWidth="150.0" />
-            <Label prefHeight="27.0" prefWidth="206.0" text="Datum für OCO" />
-            <DatePicker fx:id="dp_oco" />
+            <JFXDatePicker fx:id="dp_oco" />
          </children>
       </VBox>
    </left>
+   <center>
+      <Label fx:id="lblMeldung" prefHeight="17.0" prefWidth="380.0" text="Label" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
